# tail-match

./: .env.example  .env.prod  .gitignore  .prettierignore  CLAUDE.md  DESIGN.md  Dockerfile  Dockerfile.prod  README.md  compose.dev.yaml  compose.prod.yaml  compose.yaml  env.d.ts  next.config.js  package-lock.json  package.json  robots.txt  tailwind.config.js  test-format.ts  tsconfig.json  wrangler.toml
.claude/: CLAUDE.md  NEW_MUNICIPALITY_GUIDE.md  bugfix-log.md  common-mistakes.md  history-logger-guide.md  japan_animal_shelters.yaml.archive  operations-guide.md  scraping-architecture.md  scraping-guide.md  shelters-history.yaml  shelters.yaml
.claude/shelters/: README.md  chubu.yaml  chugoku.yaml  hokkaido.yaml  index.yaml  kanto.yaml  kinki.yaml  kyushu.yaml  okinawa.yaml  shikoku.yaml  tohoku.yaml
.github/workflows/: ci-cd.yml
data/: shelters-history.yaml  shelters.yaml  tail-match.db
data/yaml/ishikawa/: 20251111_194744_tail.yaml
database/: schema-sqlite.sql  schema.sql
database/init/: 01-create-tables.sql  02-seed-data.sql
docs/: common-mistakes.md  features.md  history-logging.md  launchd-setup.md  operations.md  overview.md  platforms.md  roadmap.md  scraping.md  user-guide.md
nginx/: nginx.conf
scraper/: .env.example  .gitignore  Dockerfile  README.md  config.py  database.py  main.py  playwright_site_investigation.py  pyproject.toml  scraper_base.py  test_detailed_extraction.py  test_ishikawa_cats_dynamic.py  test_ishikawa_direct.py  test_ishikawa_dynamic.py  test_javascript_content.py  test_no_proxy.py  test_regression.py  test_site_structure.py  universal_scraper.py
scraper-python-backup/: .env.example  README.md  database.py  health_check.py  health_monitor.py  html_sampler.py  ishikawa_scraper.py  local_extractor.py  main.py  pyproject.toml  scraper_base.py  stats_dashboard.py  test_dynamic.py  test_ishikawa_direct.py  test_ishikawa_external_shelter.py  test_playwright.py  test_proxy_env.py  test_run.py  test_scraper.py  test_simple.py  universal_scraper.py  watchdog.py
scripts/: README.md  SCRAPER_COUNT_PATTERNS.md  add-logger-to-scrapers.js  deploy.sh  fix-all-timestamps.js  fix-missing-count-function.js  fix-timestamps-batch.sh  fix-timestamps.js  generate-sh-wrappers.js  parse-ishikawa.js  run-all-scrapers.sh  scrape-ishikawa.js  show-scraping-summary.js  test-error-facilities.sh  test-fixed-facilities.sh  update-all-html-to-yaml-loggers.js  update-html-to-yaml-loggers.sh  yaml-to-db.js
scripts/core/: README.md  auto-scrape.sh  check-anomalies.js  cleanup-html-yaml.js  run-all-scrapers.sh  show-scraping-summary.js  sync-to-d1.js  sync-to-d1.sh  yaml-to-db.js
scripts/core/launchd/: com.kako-jun.tail-match-scrape.plist
scripts/lib/: adoption-status.js  animal-type.js  db.js  detect-javascript-site.js  history-logger.js  html-saver.js  timestamp.js
src/: middleware.ts
src/app/: globals.css  head.tsx  layout.tsx  metadata.ts  page.tsx  sitemap.ts
src/app/about/: page.tsx
src/components/: Footer.tsx  Header.tsx  ScrapingDashboard.tsx  SearchForm.tsx  SpaceCatGame.tsx  StatsDisplay.tsx  TailCard.tsx  TailGrid.tsx  ThemeRegistry.tsx
src/lib/: database.ts  tails.ts
src/theme/: theme.ts
src/types/: database.ts
(+967 files in other folders)
